docker file added

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:18-alpine as build
 WORKDIR /app
 COPY package*.json ./
+RUN npm install --save-dev @babel/plugin-proposal-private-property-in-object
 RUN npm install
 COPY . .
 RUN npm run build
