Jenkins File added

--- a/server/.env.example
+++ b/server/.env.example
@@ -23,5 +23,5 @@ TEXTRAZOR_API_URL=https://api.textrazor.com/
 INTERFACE_API_URL=https://api-inference.huggingface.co/models/facebook/bart-large-mnli
 
 # For flask using bart-large-mnli
-CLASSIFIER_API_URL=http://127.0.0.1:5000/classify
+CLASSIFIER_API_URL=http://classifier_server:5000/classify
 
