--- a/server/Jenkinsfile
+++ b/server/Jenkinsfile
@@ -1,5 +1,7 @@
 pipeline {
-    agent docker-swarm-manager
+    agent {
+        label 'docker-swarm-manager'
+    }
     environment {
         DOCKERHUB_CREDENTIALS = credentials('dockerhub-creds')
         DOCKERHUB_USER = 'nitace'
