--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,17 +1,20 @@
-# Base image
 FROM node:18-alpine
 
-# Set working directory
+# Create app directory
 WORKDIR /app
 
 # Install app dependencies
 COPY package.json package-lock.json ./
-RUN npm install
+RUN npm ci --only=production
 
-# Copy source code
+# Copy app source code
 COPY . .
 
-# Expose backend port (adjust if your server uses another)
+# Use non-root user for security
+RUN addgroup app && adduser -S -G app app
+USER app
+
+# Expose app port
 EXPOSE 4000
 
 # Start the app
