client docker file updated

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 # Frontend URL (used for CORS)
-CLIENT_URL=http://client:80
+CLIENT_URL=http://13.233.88.59:80
 
 # MongoDB connection string — connects to mongo service inside Swarm network
 MONGODB_URI=mongodb://mongo:27017/db_socialecho
