client docker file updated

--- a/server/.env
+++ b/server/.env
@@ -29,4 +29,4 @@ INTERFACE_API_URL=https://api-inference.huggingface.co/models/facebook/bart-larg
 
 
 # Classifier microservice URL — service name + port inside swarm network
-CLASSIFIER_API_URL=http://classifier_server:8000/classify
+CLASSIFIER_API_URL=http://13.233.88.59:8000/classify
