client docker file updated

--- a/server/.env
+++ b/server/.env
@@ -7,7 +7,7 @@ MONGODB_URI=mongodb://mongo:27017/db_socialecho
 # Backend server port (inside container)
 PORT=4000
 
-# JWT secrets (replace with strong secrets)
+# JWT secrets (replace with strong secrets)h
 SECRET=NiteshNitesh
 REFRESH_SECRET=NiteshNitesh
 
