client env file updated

--- a/server/Jenkinsfile
+++ b/server/Jenkinsfile
@@ -8,13 +8,15 @@ pipeline {
     }
     stages {
         stage('Checkout') {
-            steps {git branch: 'main', changelog: false, url: 'https://github.com/Nitesh0ne/SocialEcho-DeployInDockerSwarmEnvironment.git' }
+            steps {git branch: 'main', changelog: false, 
+            url: 'https://github.com/Nitesh0ne/SocialEcho-DeployInDockerSwarmEnvironment.git' }
         }
         stage('Build & Push Server Image') {
             steps {
                 dir('server') {
                     sh "docker build -t $DOCKERHUB_USER/socialecho_server:latest ."
-                    withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'USER', passwordVariable: 'PASS')]) {
+                    withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', 
+                    usernameVariable: 'USER', passwordVariable: 'PASS')]) {
                         sh 'echo $PASS | docker login -u $USER --password-stdin'
                         sh "docker push $DOCKERHUB_USER/socialecho_server:latest"
                        
